@@ -15,6 +15,7 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
+ o treat FTP AUTH failures properly
  o TFTP transfers could trash data
  o -d + -G combo crash
 
@@ -25,6 +26,6 @@ Other curl-related news since the previous public release:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Dan Fandrich, Ilja van Sprundel
+ Dan Fandrich, Ilja van Sprundel, David McCreedy
 
         Thanks! (and sorry if I forgot to mention someone)
